Second part done

--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                 <p class="detail_fa fa" id="detail">به عنوان یک برنامه‌نویس و مشاور با تجربه در حوزه مدیریت تیم‌های فنی و توسعه نرم‌افزارهای سفارشی، به شرکت فن‌آوران ارتباطات پالیز ملحق شدم. در این مجموعه، نقش اصلی من شامل مطالعه روش‌های پیشبرد پروژه‌ها توسط تیم و ارائه آموزش‌ها و راه‌اندازی ابزارهای مدیریت پروژه به صورت اسکرام بود. با توجه به زیرساخت‌های .NET شرکت، من آموزش و راه‌اندازی سرویس Azure DevOps را برای شرکت انجام دادم. همچنین، وظیفه بررسی وضعیت هر یک از پنج برنامه‌نویس را به عهده داشتم تا نقاط ضعف و قوت هر کدام را شناسایی کرده و برای آموزش و یا تعیین پوزیشن مناسب‌تر به شرکت اعلام کنم.</p>
             </div>
             <div class="cv_part">
-                <div class="detail_en" id="title2">Helli Institute - 2021    <span target="_blank" id="web_page">(Mr. Ansari)</a></div>
-                <div class="detail_fa fa" id="title2">موسسه آموزشی علامه حلی - ۱۳۹۸/۱۴۰۲    <span class="fa" id="web_page" >(آقای انصاری)</a></div>
+                <div class="detail_en" id="title2">Helli Institute - 2021    <span target="_blank" id="web_page">(Mr. Ansari)</span></div>
+                <div class="detail_fa fa" id="title2">موسسه آموزشی علامه حلی - ۱۳۹۸/۱۴۰۲    <span class="fa" id="web_page" >(آقای انصاری)</span></div>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://mhelli.com">mhelli.com</a>
                 </div>
@@ -318,11 +318,37 @@
             </div>
         </span>
 
-        <span class="part2">
-            <div id="title">Co-founder - Lead Programmer</div>
-            <div class="">
-                <div id="title2">Saffron Co.(2019 - 2021)</div>
-                <div id="detail">Technical Scope:  Development Director, Technical Lead, Research, JavaScript, Adobe Air</div>
+        <span class="part2 parts">
+            <div class="detail_en" id="title">Co-founder - CTO</div>
+            <div class="detail_fa fa" id="title">موسس - مدیر فن آوری اطلاعات</div>
+            <div class="cv_part">
+                <div class="detail_en" id="title2">HSH Co. - 2021/Today<span id="web_page" >(CodeKit)</span></div>
+                <div class="detail_fa fa" id="title2">شرکت هوشمند سازان هستی - ۱۴۰۰/تاکنون   <span id="web_page" >(CodeKit)</span></div>
+                
+                <div id="status_box">
+                    <a id="web_page" target="_blank" href="https://quera.org/magnet/companies/hsh-co/developers">Quera</a>
+                    <a id="web_page" target="_blank" href="https://codekit.ir/">CodeKit.ir</a>
+                </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Recruiting</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Consulting</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>HR</h4>
+                        <div><div class="p70"></div></div>
+                    </div>
+                </div>
+                <p class="detail_en" id="detail">At HSH Company as a CTO, consistently engaged in the selection and identification of young talents in the field of programming. Subsequently, I guide them towards training courses and, if possible, facilitate their employment in software companies. We are always on the lookout for skilled and ready-to-work programmers to attract and place them in various companies.</p>
+                <p class="detail_fa fa" id="detail">من به عنوان مدیر فن آوری اطلاعات در شرکت هوشمند سازان هستی، همواره در حال گزینش و شناسایی استعدادهای جوان در زمینه برنامه‌نویسی است و سپس هدایت آنها به سوی دوره‌های آموزشی و در صورت امکان، استخدام در شرکت‌های نرم‌افزاری. ما همواره به دنبال نیروهای برنامه‌نویس آماده به کار برای جذب و انتقال آنان به شرکت‌های مختلف هستیم.</p>
+            </div>
+            <div class="cv_part">
+                <div class="detail_en" id="title2">Saffron Co. - 2019/2021</div>
+                <div class="detail_fa fa" id="title2">شرکت نرم افزار گستر زعفران - ۱۳۹۸/۱۴۰۰</div>
                 
                 <div id="status_box">
                     <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode">SaffronCode SDK</a>
@@ -330,7 +356,7 @@
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>Software Programmer</h4>
+                        <h4>SDK Programming</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
@@ -341,18 +367,9 @@
                         <h4>JavaScript</h4>
                         <div><div class="p95"></div></div>
                     </div>
-                    <div id="status_bar">
-                        <h4>Technical Consultant</h4>
-                        <div><div class="p80"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>OWASP</h4>
-                        <div><div class="p100"></div></div>
-                    </div>
                 </div>
-                <p id="detail">I was creator and founder of a Software Development Kit, named SaffronCodeSDK which gathered from about 500 Libraries and Tools.
-                    <br/>
-                    SaffronCodeSDK is a mobile application development kit based on Adobe Air SDK compatible with Android, iOS, Windows, and Macintosh.</p>
+                <p class="detail_en" id="detail">As the inventor of the 'Saffron Code' SDK and holding the position of CEO, I had the responsibility to offer software infrastructure services to software companies that had utilized this framework to develop their mobile applications. 'Saffron Code' was developed for Android and iOS mobile app development using the ActionScript3 and AdobeAir programming languages. Hundreds of mobile applications were produced for startups using this framework between the years 2014 to 2023 and were published on software marketplaces.</p>
+                <p class="detail_fa fa" id="detail">به عنوان مخترع فریم‌ورک 'زعفران کد' و با عنوان مدیر عامل، وظیفه‌ای داشتم که خدمات زیرساخت نرم‌افزاری این فریم‌ورک را به شرکت‌های نرم‌افزاری که با کمک آن نرم‌افزارهای موبایل خود را تولید کرده بودند، ارائه کنم. 'زعفران کد' برای توسعه برنامه‌های موبایل در پلتفرم‌های اندروید و iOS با استفاده از زبان برنامه‌نویسی ActionScript3 و AdobeAir طراحی و پیاده‌سازی شده بود. صدها نرم‌افزار موبایل برای استارتاپ‌ها در دوره‌ی بین سال‌های ۱۳۹۳ تا ۱۴۰۰ با استفاده از این فریم‌ورک تولید و در فروشگاه‌های نرم‌افزاری منتشر شده بودند.</p>
             </div>
         </span>
 
