Hash links created

--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
             <div class="detail_en">
                 <div id="title">PROFESSIONS</div>
                 <div id="title2">2009 - 2023</div>
-                    <div id="detail">Senior Software Engineer & Tech Lead</div>
-                    <div id="detail">Agile Coach & Scrum Master</div>
-                    <div id="detail">Technical Project Manager with Team Leadership</div>
-                    <div id="detail">Software Development Manager</div>
-                    <div id="detail">Technology Team Lead with Extensive Team Collaboration</div>
+                    <div id="detail"><a href="#part1">Principal Solution Architect - Technical Lead</a></div>
+                    <div id="detail"><a href="#part2">Co-founder - CTO</a></div>
+                    <div id="detail"><a href="#part3">Technical Advisor for Startups</a></div>
+                    <div id="detail"><a href="#part4">Awards and Certificates</a></div>
+                    <div id="detail"><a href="#part5">Personal Characteristics</a></div>
             </div>
             <div class="detail_fa">
                 <div class="fa" id="title">تخصص ها</div>
                 <div class="fa" id="title2">۱۳۸۷ - ۱۴۰۲</div>
-                    <div class="fa" id="detail">مهندس نرم‌افزار ارشد و راهبر فنی</div>
-                    <div id="detail_fa">مربی Agile و اسکرام مستر</div>
-                    <div id="detail_fa">مدیر فنی پروژه با رهبری تیم</div>
-                    <div id="detail_fa">مدیر توسعه نرم‌افزار</div>
-                    <div id="detail_fa">راهبری تکنولوژی با توسعه تیم برنامه نویسی</div>
+                    <div id="detail_fa"><a class="fa" href="#part1">معمار و راهبر نرم افزار و تیم فنی</a></div>
+                    <div id="detail_fa"><a class="fa" href="#part2">موسس - مدیر فن آوری اطلاعات</a></div>
+                    <div id="detail_fa"><a class="fa" href="#part3">مشاور فنی استارت آپ</a></div>
+                    <div id="detail_fa"><a class="fa" href="#part4">جوایز و گواهی نامه ها</a></div>
+                    <div id="detail_fa"><a class="fa" href="#part5">ویژگی های شخصیتی</a></div>
             </div>
             
             <img id="my_sign" src="./img/social/Muhammad_Rasool_Allah.png" alt="Muhammad Rasool Allah"/>
@@ -148,7 +148,7 @@
                         <br/><br/>
                         Throughout my journey, my main focus has been on programming and solving complex algorithmic problems to advance the best software solutions for my clients. My goal is to ensure that no project or programmer faces setbacks or disappointments during any stage of project execution. Consequently, I continue to pursue my professional work in programming and problem-solving. I possess extensive experience in team collaboration with developers, designers, and project managers, and I am capable of creating a positive and cohesive work environment. By emphasizing quality and precision in every aspect of a project, I strive to deliver the best results to my clients.</p>
                 </div>
-            <span class="parts part1">
+            <span class="parts" id="part1">
             <div class="detail_en" id="title">Principal Solution Architect - Technical Lead</div>
             <div class="detail_fa fa" id="title">معمار و راهبر نرم افزار و تیم فنی</div>
             <!-- <div id="title2">Major Customers</div> -->
@@ -318,7 +318,7 @@
             </div>
         </span>
 
-        <span class="part2 parts">
+        <span class="parts" id="part2">
             <div class="detail_en" id="title">Co-founder - CTO</div>
             <div class="detail_fa fa" id="title">موسس - مدیر فن آوری اطلاعات</div>
             <div class="cv_part">
@@ -373,7 +373,7 @@
             </div>
         </span>
 
-        <span class="parts part3">
+        <span class="parts" id="part3">
             <div class="detail_en" id="title">Technical Advisor for Startups</div>
             <div class="detail_fa fa" id="title">مشاور فنی استارت آپ</div>
             <p class="detail_en" id="detail">As an experienced technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor, Agile project manager and so on. some of them are mentioned here.</p>
@@ -551,7 +551,7 @@
             </div>
             </span>
 
-            <span class="parts part4">
+            <span class="parts part4" id="part4">
 
                 <div class="detail_en" id="title">Awards and Certificates</div>
                 <div class="detail_fa fa" id="title">جوایز و گواهی نامه ها</div>
@@ -620,7 +620,7 @@
             <br/>
             <br/>
 
-            <span class="parts part5">
+            <span class="parts" id="part5">
                 <div class="detail_en" id="title2">Additional experience</div>
                 <div class="detail_fa fa" id="title2">تجربه های دیگر</div>
                 <p id="detail">Additional experience as a web developer for Hoogaman for 2 years and Software Developer for E-Learning application and games for Ganjineh Yaad Co. Also was programming Android and iOS applications in "Motahar-net" Co for about 4 years.</p>
