Some farsi texts left behind

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="info">
             <div id="title">&lt;/</div>
             <p class="detail_fa" id="detail_fa">
-                با بیش از <span class="experience_text_light" id="detail_fa">.۰</span><span class="experience_text" id="detail_fa">۱۳</span> سال سابقه کار حرفه‌ای در حوزه نرم افزار، من یک کارشناس قابل اعتماد و با تجربه در زمینه توسعه و مدیریت پروژه‌های برنامه‌نویسی هستم. تخصص من در تیم‌سازی، برنامه‌نویسی های ویژه، طراحی و راه‌اندازی فرایندهای CI/CD و راهبری تیم‌های برنامه‌نویسی برای دستیابی به اهداف پروژه است. در طول سال‌ها، به عنوان رهبر تیم و مهندس نرم افزاری، توانسته‌ام در شرکت های بزرگ و کوچک، نرم‌افزارهای پیچیده و محصولات با کیفیت بالا را توسعه دهم و به طور موثری در فرآیند توسعه و بهبود کیفیت نرم‌افزارها واقع شوم. از طریق طراحی و پیاده‌سازی فرایندهای CI/CD، توانسته‌ام عملکرد تیم‌ها را بهبود دهم و توسعه نرم‌افزارها را تسهیل کنم.<br/><br/>
+                با بیش از <span class="experience_text_light fa">.۰</span><span class="experience_text fa">۱۳</span> سال سابقه کار حرفه‌ای در حوزه نرم افزار، من یک کارشناس قابل اعتماد و با تجربه در زمینه توسعه و مدیریت پروژه‌های برنامه‌نویسی هستم. تخصص من در تیم‌سازی، برنامه‌نویسی های ویژه، طراحی و راه‌اندازی فرایندهای CI/CD و راهبری تیم‌های برنامه‌نویسی برای دستیابی به اهداف پروژه است. در طول سال‌ها، به عنوان رهبر تیم و مهندس نرم افزاری، توانسته‌ام در شرکت های بزرگ و کوچک، نرم‌افزارهای پیچیده و محصولات با کیفیت بالا را توسعه دهم و به طور موثری در فرآیند توسعه و بهبود کیفیت نرم‌افزارها واقع شوم. از طریق طراحی و پیاده‌سازی فرایندهای CI/CD، توانسته‌ام عملکرد تیم‌ها را بهبود دهم و توسعه نرم‌افزارها را تسهیل کنم.<br/><br/>
             </p>
             <p class="detail_en" id="detail">
                 With over <span class="experience_text">13</span><span class="experience_text_light">.0</span> years of professional experience in the software industry, I am a dependable and experienced specialist in software development and project management. My expertise lies in team building, skilled programming, designing and implementing CI/CD processes, and guiding software development teams towards project objectives. Throughout the years, as a team leader and software engineer, I have successfully developed complex software and delivered high-quality products within many companies. By designing and implementing CI/CD processes, I have been able to enhance team performance and facilitate software development effectively.<br/><br/>
@@ -622,7 +622,8 @@
             <span class="parts" id="part5">
                 <div class="detail_en" id="title2">Additional experience</div>
                 <div class="detail_fa fa" id="title2">تجربه های دیگر</div>
-                <p id="detail">Additional experience as a web developer for Hoogaman for 2 years and Software Developer for E-Learning application and games for Ganjineh Yaad Co. Also was programming Android and iOS applications in "Motahar-net" Co for about 4 years.</p>
+                <p class="detail_en" id="detail">Additional experience as a web developer for Hoogaman for 2 years and Software Developer for E-Learning application and games for Ganjineh Yaad Co. Also was programming Android and iOS applications in "Motahar-net" Co for about 4 years.</p>
+                <p class="detail_fa fa" id="detail">به عنوان یک توسعه‌دهنده وب در شرکت هوگامان به مدت ۲ سال و توسعه‌دهنده نرم‌افزار برای برنامهٔ آموزش الکترونیکی و بازی‌ها در شرکت گنجینهٔ یاد داشتم. همچنین به مدت تقریبی ۴ سال در شرکت مطهر نت پارس به برنامه‌نویسی برنامه‌های اندروید و iOS مشغول بودم.</p>
                     
                 <div class="detail_en" id="title">Personal Characteristics</div>
                 <div class="detail_fa fa" id="title">ویژگی های شخصیتی</div>
