google tag updated

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad Ebrahim Sepehr, Solution Software Architect, Programmer, Technical Lead, Agile Coach">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-230819555-1"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F9Z3KWLTW0"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'UA-230819555-1');
+    gtag('config', 'G-F9Z3KWLTW0');
     </script>
 
 </head>
