--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammad Ebrahim Sepehr, Principal Software Solution Architect</title>
+    <title>Mohammad E. Sepehr (محمد ابراهیم سپهر), Principal Software Solution Architect</title>
     <meta name="description" content="Mohammad Ebrahim Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
     <meta property="og:description" content="Mohammad Ebrahim Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
     <meta property="og:image" content="https://ebrahimsepehr.ir/img/mesepehr.webp" />
