--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
     <meta name="author" content="Mohammad Ebrahim Sepehr">
     <link rel="stylesheet" href="./style/style.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="favicon.png" >
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#f0f0f0">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#181313">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad Ebrahim Sepehr, Solution Software Architect, Programmer, Technical Lead, Agile Coach">
@@ -43,6 +53,8 @@
 
 </head>
 <body>
+    <h1 class="detail_en">MOHAMMAD E. SEPEHR, Lead Technical Consultant</h1>
+    <h1 class="detail_fa fa">محمد ابراهیم سپهر - راهبر و مشاور ارشد نرم افزار</h1>
     <header>
         <div id="image">
             <img src="./img/mesepehr.webp" alt="ebrahimsepehr.ir">
@@ -76,8 +88,6 @@
             
         </div>
     </header>
-    <h1 class="detail_en">MOHAMMAD E. SEPEHR, Lead Technical Consultant</h1>
-    <h1 class="detail_fa fa">محمد ابراهیم سپهر - راهبر و مشاور ارشد نرم افزار</h1>
     <div id="body">
         <div id="left_side">
             <div id="sticky">
