--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <div class="detail_fa">
                 <div class="fa" id="title">سوابق</div>
                 <!-- <div class="fa" id="title2">۱۳۸۷ - ۱۴۰۲</div> -->
-                    <div id="detail_fa"><a class="fa link" href="#part1">- کد نویس، معمار و راهبر نرم افزار</a></div>
-                    <div id="detail_fa"><a class="fa link" href="#part2">- CTO CEO</a></div>
+                    <div id="detail_fa"><a class="fa link" href="#part1">- مدیر فنی، کد نویس، معمار و راهبر نرم افزار</a></div>
+                    <div id="detail_fa"><a class="fa link" href="#part2">- موسس و مدیرعاملی</a></div>
                     <div id="detail_fa"><a class="fa link" href="#part3">- ارائه مشاوره</a></div>
                     <div id="detail_fa"><a class="fa link" href="#part4">- افتخارات و گواهی نامه ها: ( ثبت اختراع، برگزاری ورکشاپ، مصاحبه و... )</a></div>
                     <div id="detail_fa"><a class="fa link" href="#part5">- بیوگرافی</a></div>
@@ -137,7 +137,7 @@
             
             <span class="parts" id="part1">
             <div class="detail_en" id="title">Principal Solution Architect - Technical Lead</div>
-            <div class="detail_fa fa" id="title">معمار و راهبر نرم افزار و تیم فنی</div>
+            <div class="detail_fa fa" id="title">مدیر فنی، معمار و راهبر نرم افزار</div>
             <!-- <div id="title2">Major Customers</div> -->
             <div class="cv_part">
                 <div class="detail_en" id="title2">Setareh Honar Institute. - 2023/2024    <span id="web_page" >(Mr. Shahbazi)</a></div>
