Some other updates

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             
             <span class="parts" id="part1">
             <div class="detail_en" id="title">Principal Solution Architect - Technical Lead</div>
-            <div class="detail_fa fa" id="title">مدیر فنی، معمار و راهبر نرم افزار</div>
+            <div class="detail_fa fa" id="title">مدیر فنی و راهبر نرم افزار</div>
             <!-- <div id="title2">Major Customers</div> -->
             <div class="cv_part">
                 <div class="detail_en" id="title2">Setareh Honar Institute. - 2023/2024    <span id="web_page" >(Mr. Shahbazi)</a></div>
@@ -603,9 +603,9 @@
                         <a target="_blank" href="https://ebrahimsepehr.ir/img/Bachelor.webp"><img src="./img/Bachelor.webp" alt="Bachelor degree, Science in Computer Software Engineering"/></a>
                     </div>
                 </div>
+                <br/>
+                <br/>
             </span>
-            <br/>
-            <br/>
 
             <div class="detail_en" id="title2">Additional experience</div>
             <div class="detail_fa fa" id="title2">تجربه های دیگر</div>
