Text updated index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div id="extra_space"></div>
             <!-- <div id="title">&lt;/</div> -->
             <p class="detail_fa" id="detail_fa">
-                با <span class="experience_text_light fa">.۰</span><span class="experience_text fa">۱۳</span> سال سابقه کار حرفه‌ای در حوزه نرم افزار ها، من یک کارشناس قابل اعتماد و با تجربه در زمینه توسعه و مدیریت پروژه‌های برنامه‌نویسی و سال ها تجربه کد نویسی تحت اندروید، iOS، وب و دسکتاپ هستم. <br/><br/>
+                با <span class="experience_text_light fa">.۰</span><span class="experience_text fa">۱۳</span> سال سابقه کار حرفه‌ای در حوزه نرم افزار ها، یک کارشناس قابل اعتماد و با تجربه در زمینه توسعه و مدیریت پروژه‌های برنامه‌نویسی با سال ها تجربه کد نویسی تحت اندروید، iOS، وب و دسکتاپ. <br/><br/>
                 تخصص من در تیم‌سازی، برنامه‌نویسی های ویژه، طراحی و راه‌اندازی فرایندهای CI/CD و راهبری تیم‌های برنامه‌نویسی برای دستیابی به اهداف پروژه است. در طول سال‌ها، به عنوان مالک محصول، رهبر تیم و مهندس نرم افزار، توانسته‌ام در شرکت های بزرگ و کوچک، نرم‌افزارهای پیچیده و محصولات با کیفیت بالا را متناسب با شرایط و نیازمندی شرکت ها توسعه دهم و به طور موثری در فرآیند توسعه و بهبود کیفیت نرم‌افزارها واقع شوم. از طریق طراحی و پیاده‌سازی فرایندهای CI/CD، توانسته‌ام عملکرد تیم‌ها را بهبود و توسعه نرم‌افزارها را تسهیل و سرعت بخشم.<br/><br/>
             </p>
             <p class="detail_en" id="detail">
