Better print view

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </div>
                 <p class="detail_fa fa" id="detail">موسسه فرهنگی بینا، جهت امکان توسعه زیرساخت‌های نرم‌افزاری مورد نیاز برای پروژه‌های خود، با من همکاری را آغاز کرد تا یک تیم برنامه‌نویس داخلی را برای آنها تشکیل دهیم و زیرساخت‌هایی از قبیل فرم‌های نظرسنجی، پنل‌های گزارش‌دهی، پنل‌های جئومتریک و سامانه SSO تحت وب راه‌اندازی کنم.
                 <br/>
-                برای این مجموعه، دو برنامه‌نویس ReactJS و یک برنامه‌نویس Golang گزینش و یک نفر QC انتخاب و پس از آموزش های لازم، تحویل به مالک محصول موسسه شد. تمام کد ها و سرور ها با سرویس های ci/cd متصل و فرایند های انتشار نسخه و بک آپ ها خودکار سازی شد.</p>
+                برای این مجموعه، دو برنامه‌نویس ReactJS و یک برنامه‌نویس Golang گزینش و یک نفر QC انتخاب و پس از آموزش های لازم، تحویل به مالک محصول موسسه شد. تمامی کد ها و سرور ها با سرویس های ci/cd متصل و فرایند های انتشار نسخه و بک آپ ها خودکار سازی شد.</p>
                 <p class="detail_en" id="detail">The Bina Institute, in order to enable the development of the necessary software infrastructure for its projects, initiated collaboration with me to establish an in-house programming team. My role was to set up web-based infrastructures such as survey forms, reporting panels, geospatial panels, and SSO systems.
                 <br/>
                 For this organization, I recruited two ReactJS developers and one Golang developer and one QC specialist. After receiving the necessary training, they were handed over to the product owner of the institute. All codes and servers were connected to CI/CD services, and the version release and backup processes were automated.</p>
@@ -536,6 +536,10 @@
                 <p class="detail_fa fa" id="detail">آزتا بازار یک سرویس خرید آنلاین بود که تمرکز خود را بر روی محصولات خوارباری داشت. این استارتاپ از یک پنل سمت سرور برای مدیران، یک اپلیکیشن اندروید برای مدیران فروشگاه‌های خواربار و یک اپلیکیشن اندروید برای مشتریان تشکیل شده بود.</p>
                 
             </div>
+            <div class="detail_en" id="title2">Additional experience</div>
+            <div class="detail_fa fa" id="title2">تجربه های دیگر</div>
+            <p class="detail_en" id="detail">Additional experience as a web developer for Hoogaman for 2 years and Software Developer for E-Learning application and games for Ganjineh Yaad Co. Also was programming Android and iOS applications in "Motahar-net" Co for about 4 years.</p>
+            <p class="detail_fa fa" id="detail">به عنوان یک توسعه‌دهنده وب در شرکت هوگامان به مدت ۲ سال و توسعه‌دهنده نرم‌افزار برای برنامهٔ آموزش الکترونیکی و بازی‌ها در شرکت گنجینهٔ یاد داشتم. همچنین به مدت تقریبی ۴ سال در شرکت مطهر نت پارس به برنامه‌نویسی برنامه‌های اندروید و iOS مشغول بودم.</p>
             </span>
 
             <span class="parts part4" id="part4">
@@ -607,10 +611,7 @@
                 <br/>
             </span>
 
-            <div class="detail_en" id="title2">Additional experience</div>
-            <div class="detail_fa fa" id="title2">تجربه های دیگر</div>
-            <p class="detail_en" id="detail">Additional experience as a web developer for Hoogaman for 2 years and Software Developer for E-Learning application and games for Ganjineh Yaad Co. Also was programming Android and iOS applications in "Motahar-net" Co for about 4 years.</p>
-            <p class="detail_fa fa" id="detail">به عنوان یک توسعه‌دهنده وب در شرکت هوگامان به مدت ۲ سال و توسعه‌دهنده نرم‌افزار برای برنامهٔ آموزش الکترونیکی و بازی‌ها در شرکت گنجینهٔ یاد داشتم. همچنین به مدت تقریبی ۴ سال در شرکت مطهر نت پارس به برنامه‌نویسی برنامه‌های اندروید و iOS مشغول بودم.</p>
+            
             <span class="parts" id="part5">
             <div class="detail_en" id="title">Bio</div>
             <div class="detail_fa fa" id="title">بیوگرافی</div>
