Recommendations part added

--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
                 </div>
                 <p class="detail_en" id="detail">As a programmer and consultant with experience in managing technical teams and developing custom software, I joined Paliz Company. In this software organization, my primary role involved studying project management methodologies, providing training, and implementing project management tools in an Agile (Scrum) format. Considering the company's .NET infrastructure, I conducted training and set up Azure DevOps services for the company. Additionally, I was responsible for assessing the status of each of the five programmers, identifying their strengths and weaknesses, and communicating them to the company for training or determining more suitable positions.</p>
                 <p class="detail_fa fa" id="detail">به عنوان یک برنامه‌نویس و مشاور با تجربه در حوزه مدیریت تیم‌های فنی و توسعه نرم‌افزارهای سفارشی، به شرکت فن‌آوران ارتباطات پالیز ملحق شدم. در این مجموعه، نقش اصلی من شامل مطالعه روش‌های پیشبرد پروژه‌ها توسط تیم و ارائه آموزش‌ها و راه‌اندازی ابزارهای مدیریت پروژه به صورت اسکرام بود. با توجه به زیرساخت‌های .NET شرکت، من آموزش و راه‌اندازی سرویس Azure DevOps را برای شرکت انجام دادم. همچنین، وظیفه بررسی وضعیت هر یک از پنج برنامه‌نویس را به عهده داشتم تا نقاط ضعف و قوت هر کدام را شناسایی کرده و برای آموزش و یا تعیین پوزیشن مناسب‌تر به شرکت اعلام کنم.</p>
+                <p class="fa" id="detail"><a target="_blank" class="fa link" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">- توصیه نامه </a></p>
+                <p class="detail_en" id="detail"><a target="_blank" class="link" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">- Recommendation letter</a></p>
             </div>
             <div class="cv_part">
                 <div class="detail_en" id="title2">Helli Institute - 2021    <span target="_blank" id="web_page">(Mr. Ansari)</span></div>
@@ -302,6 +304,8 @@
                 </div>
                 <p class="detail_en" id="detail">Alameh Helli Educational Institute, recognizing the need to improve and enhance its online examination system and the lack of a developer, approached me to take charge of the development and support of this system by forming a new team. Given the outdated source code, this task posed a challenge. However, after several months of studying the source code and familiarizing myself with various tools and languages such as Python, Linux, React, and C++, I was able to acquire the necessary skills for the development and support of these projects. In addition to the main project, significant projects such as a mobile version of the e-book reader, management panels for student class registration, and a customized VoIP system were developed for the institute's use. Furthermore, I assembled a complete team to support and develop each of these projects within the institute.</p>
                 <p class="detail_fa fa" id="detail">موسسه آموزشی علامه حلی، با درک نیاز به بهبود و ارتقای سامانه آزمون آنلاین خود و فقدان توسعه‌دهنده، از من درخواست کرد تا با تشکیل یک تیم جدید، توسعه و پشتیبانی از این سامانه را بر عهده بگیرم. با توجه به قدیمی بودن سورس کد، این وظیفه چالش‌برانگیزی بود، اما پس از چند ماه مطالعه سورس کد و آشنایی با ابزارها و زبان‌های مختلف مانند پایتون، لینوکس، ریکت و C++، توانستم مهارت‌های لازم را در توسعه و پشتیبانی از این پروژه‌ها به دست آورم. علاوه بر پروژه اصلی، پروژه‌های مهمی مانند نسخه موبایل کتابخوان، پنل‌های مدیریت برای ثبت نام کلاس‌های دانش‌آموزان و سامانه ویپ سفارشی سازی شده نیز برای استفاده در موسسه توسعه و طراحی شدند. همچنین، یک تیم کامل برای پشتیبانی و توسعه هریک از این پروژه‌ها در موسسه تشکیل دادم.</p>
+                <p class="fa" id="detail"><a target="_blank" class="fa link" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">- توصیه نامه </a></p>
+                <p class="detail_en" id="detail"><a target="_blank" class="link" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">- Recommendation letter</a></p>
             </div>
         </span>
 
@@ -562,6 +566,16 @@
                 <div id="status_box">
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/Patent.webp">Patent ipm.ssaa.ir RN=66427</a>
                     <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers">SaffronCode SDK</a>
+                </div>
+                <div class="detail_en" id="title2">ًRecommendations</div>
+                <div class="detail_fa fa" id="title2">حسن انجام کار - توصیه نامه ها</div>
+                <div id="status_box">
+                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf"><img src="./img/recommendations/paliz.webp" alt="Paliz ًRecommendation"/></a>
+                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf"><img src="./img/recommendations/mhelli.webp" alt="MHelli Recommendation"/></a>
+                </div>
+                <div id="status_box">
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">Paliz Co. Recommendation</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">MHelli Co. Recommendation</a>
                 </div>
                 
                 <div class="detail_en" id="title2">Art University of Isfahan - 2012 to 2015  <a id="web_page" target="_blank" href="https://en.aui.ac.ir/">(aui.ac.ir)</a></div>
