--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 <div class="detail_en" id="title2">Patent certificate</div>
                 <div class="detail_fa fa" id="title2">گواهی ثبت اختراع</div>
                 <p class="detail_en" id="detail">I was produce SaffronCode SDK and I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middleware.</p>
-                <p class="detail_fa fa" id="detail">من نویسنده اصلی ابزار برنامه نویسی 'زعفران کد' هستم، همچنین من عضوی از تیم مخترعان یک نوع کامپیوتر قابل حمل بودم. من مسئول طراحی و برنامه‌نویسی نرم‌افزار و میان‌افزار بودم.</p>
+                <p class="detail_fa fa" id="detail"> نویسنده اصلی ابزار برنامه نویسی 'زعفران کد'، و عضوی از تیم مخترعان یک نوع کامپیوتر قابل حمل و مسئول طراحی و برنامه‌نویسی نرم‌افزار و میان‌افزار .</p>
                 <div id="status_box">
                     <div id="image_3">
                         <a target="_blank" href="https://ebrahimsepehr.ir/img/Patent.webp"><img src="./img/Patent-icon.webp" alt="Patent certificate"/></a>
