--- a/index.html
+++ b/index.html
@@ -555,10 +555,12 @@
                 <div class="detail_fa fa" id="title2">حسن انجام کار - توصیه نامه ها</div>
                 <div id="status_box">
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf"><img src="./img/recommendations/paliz.webp" alt="Paliz ًRecommendation"/></a>
+                    <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf"><img src="./img/recommendations/Mohammad E. Sepehr - recommendation.webp" alt="Distriqt Pty Ltd Recommendation"/></a>
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf"><img src="./img/recommendations/mhelli.webp" alt="MHelli Recommendation"/></a>
                 </div>
                 <div id="status_box">
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">Paliz Co. Recommendation</a>
+                    <a class="detail_en" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">Distriqt Pty Ltd Recommendation</a>
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">MHelli Co. Recommendation</a>
                 </div>
 
@@ -657,60 +659,6 @@
                 <div class="detail_en" id="title2">Personal Characteristics</div>
                 <div class="detail_fa fa" id="title2">ویژگی های شخصیتی</div>
                 <p class="en-fa" id="detail">MBTI: ISTJ</p>
-                <div id="status_box">
-                    <div id="status_bar">
-                        <h4>Honesty</h4>
-                        <div><div class="p100"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Problem-solving</h4>
-                        <div><div class="p100"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Helpfulness</h4>
-                        <div><div class="p99"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Sincerity</h4>
-                        <div><div class="p90"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Creative thinking</h4>
-                        <div><div class="p100"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Leadership skills</h4>
-                        <div><div class="p99"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Interpersonal skills</h4>
-                        <div><div class="p70"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Adaptability</h4>
-                        <div><div class="p100"></div></div>
-                    </div>
-                </div>
-                <p class="detail_en" id="detail">Hobbies</p>
-                <p class="detail_fa fa" id="detail">اوغات فراغت</p>
-                <div id="status_box">
-                    <div id="status_bar">
-                        <h4>Nature</h4>
-                        <div><div class="p90"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Swim</h4>
-                        <div><div class="p90"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Read a Book</h4>
-                        <div><div class="p100"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Restaurants</h4>
-                        <div><div class="p70"></div></div>
-                    </div>
-                </div>
             </span>
             <div id="extra_space"></div>
         </div>
