Dayan description updated

--- a/index.html
+++ b/index.html
@@ -432,6 +432,10 @@
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
+                        <h4>Jira</h4>
+                        <div><div class="p700"></div></div>
+                    </div>
+                    <div id="status_bar">
                         <h4>BlockChains</h4>
                         <div><div class="p50"></div></div>
                     </div>
@@ -440,8 +444,8 @@
                         <div><div class="p50"></div></div>
                     </div>
                 </div>
-                <div class="detail_en" id="detail">I was invited to contribute to the development of the programming team at "Dyan Startup Studio", a startup studio focused on attracting investors and aiding the growth of startups in various fields. The purpose of my invitation was to enable the studio to provide assistance to startups in their software development endeavors. Two PHP programmers were selected for this company and were onboarded, providing them with the necessary training.</div>
-                <div class="detail_fa fa" id="detail">من برای توسعه تیم برنامه‌نویسی در استودیو دایان، یک استارت‌آپ استودیو که به جذب سرمایه‌گذاران و کمک به رشد استارت‌آپ‌ها در حوزه‌های مختلف می‌پردازد، دعوت شدم. هدف از این دعوت، امکان کمک به استارت‌آپ‌ها در زمینه توسعه نرم‌افزارهای خود بود. دو برنامه‌نویس PHP برای این شرکت انتخاب و به استودیو پیوستند و به آن‌ها آموزش‌های لازم ارائه شد.</div>
+                <div class="detail_en" id="detail">I was invited to contribute to the development of the programming team at "Dyan Startup Studio", a startup studio focused on attracting investors and aiding the growth of startups in various fields. The purpose of my invitation was to enable the studio to provide assistance to startups in their software development endeavors. Two PHP programmers were selected for this company and were onboarded, providing them with the necessary training.<br/>Also, I sat up CI/CD to automate processes and also installed Jira for project management purposes.</div>
+                <div class="detail_fa fa" id="detail">من برای توسعه تیم برنامه‌نویسی در استودیو دایان، یک استارت‌آپ استودیو که به جذب سرمایه‌گذاران و کمک به رشد استارت‌آپ‌ها در حوزه‌های مختلف می‌پردازد، دعوت شدم. هدف از این دعوت، امکان کمک به استارت‌آپ‌ها در زمینه توسعه نرم‌افزارهای خود بود. دو برنامه‌نویس PHP برای این شرکت انتخاب و به استودیو پیوستند و به آن‌ها آموزش‌های لازم ارائه شد.<br/>همچنین، CI/CD را برای خودکارسازی فرآیندها طراحی و راه اندازی کرده و همچنین Jira برای مدیریت تسک ها برای شرکت راه اندازی کرد..</div>
                 
             </div>
             <div class="cv_part">
