Farsi label on my interview

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                     </div>
                 </div>
                 <div id="status_box">
-                    <a id="web_page" target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/">farhikhtegandaily.com Text</a>
+                    <a id="web_page" target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/">farhikhtegandaily.com Text (Farsi)</a>
                     <a id="web_page" target="_blank" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92">dotnetexpert.ir Video (Farsi)</a>
                 </div>
 
