--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                 <div class="detail_fa fa" id="title2">ویژگی های شخصیتی</div>
                 <p class="en-fa" id="detail">MBTI: ISTJ</p>
                 <p class="detail_en" id="detail">Hobbies:</p>
-                <p class="detail_fa fa" id="detail">فراغت:</p>
+                <p class="detail_fa fa" id="detail">علاقه مندی ها:</p>
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Family</h4>
