--- a/index.html
+++ b/index.html
@@ -562,10 +562,14 @@
                     <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf"><img src="./img/recommendations/Mohammad E. Sepehr - recommendation.webp" alt="Distriqt Pty Ltd Recommendation"/></a>
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf"><img src="./img/recommendations/mhelli.webp" alt="MHelli Recommendation"/></a>
                 </div>
-                <div id="status_box">
+                <div class="detail_en" id="status_box">
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">Paliz Co. Recommendation</a>
                     <a class="detail_en" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">Distriqt Pty Ltd Recommendation</a>
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">MHelli Co. Recommendation</a>
+                </div>
+                <div class="detail_fa" id="status_box">
+                    <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">فناوران ارتباطات پالیز - توصیه نامه</a>
+                    <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">موسسه علامه حلی - توصیه نامه</a>
                 </div>
 
                 <!--div class="detail_en" id="title2">Patent certificate</div>
@@ -595,10 +599,15 @@
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp"><img src="./img/ArtUniversityofIsfahan-2013-icon.webp" alt="Art University of Isfahan - 2013"/></a>
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp"><img src="./img/ArtUniversityofIsfahan-2012-icon.webp" alt="Art University of Isfahan - 2012"/></a>
                 </div>
-                <div id="status_box">
+                <div class="detail_en" id="status_box">
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp">Art University of Isfahan - 2015</a>
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp">Art University of Isfahan - 2013</a>
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp">Art University of Isfahan - 2012</a>
+                </div>
+                <div class="detail_fa" id="status_box">
+                    <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp">دانشگاه هنر اصفهان - ۱۳۹۴</a>
+                    <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp">دانشگاه هنر اصفهان - ۱۳۹۲</a>
+                    <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp">دانشگاه هنر اصفهان - ۱۳۹۱</a>
                 </div>
                 
                 <div class="detail_en" id="title2">Interviews</div>
@@ -613,9 +622,13 @@
                         <a target="_blank" id="image_2" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92"><img src="./img/Interview_karshenasan.webp" alt="Interview with Karshenasan.net"/></a>
                     </div>
                 </div>
-                <div id="status_box">
+                <div class="detail_en" id="status_box">
                     <a id="web_page" target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/">farhikhtegandaily.com Text (Farsi)</a>
                     <a id="web_page" target="_blank" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92">dotnetexpert.ir Video (Farsi)</a>
+                </div>
+                <div class="detail_fa" id="status_box">
+                    <a id="web_page" target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/">farhikhtegandaily.com</a>
+                    <a id="web_page" target="_blank" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92">dotnetexpert.ir</a>
                 </div>
 
                 
