--- a/index.html
+++ b/index.html
@@ -559,16 +559,18 @@
                 <div class="detail_fa fa" id="title2">حسن انجام کار - توصیه نامه ها</div>
                 <div id="status_box">
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf"><img src="./img/recommendations/paliz.webp" alt="Paliz ًRecommendation"/></a>
+                    <a class="detail_fa" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/bina.pdf"><img src="./img/recommendations/bina.webp" alt="Bina Institute Recommendation"/></a>
                     <a class="detail_en" target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf"><img src="./img/recommendations/Mohammad E. Sepehr - recommendation.webp" alt="Distriqt Pty Ltd Recommendation"/></a>
                     <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf"><img src="./img/recommendations/mhelli.webp" alt="MHelli Recommendation"/></a>
                 </div>
                 <div class="detail_en" id="status_box">
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">Paliz Co. Recommendation</a>
-                    <a class="detail_en" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">Distriqt Pty Ltd Recommendation</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/Mohammad E. Sepehr - recommendation.pdf">Distriqt Pty Ltd Recommendation</a>
                     <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">MHelli Co. Recommendation</a>
                 </div>
                 <div class="detail_fa" id="status_box">
                     <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/paliz.pdf">فناوران ارتباطات پالیز - توصیه نامه</a>
+                    <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/bina.pdf">موسسه دیده گستر فرهنگ بینا - حسن انجام کار</a>
                     <a class="fa" id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/recommendations/mhelli.pdf">موسسه علامه حلی - توصیه نامه</a>
                 </div>
 
